--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -1,200 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Corebell Engine v0.0.1</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      background-color: #1e1e1e;
-      color: #ffffff;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
-
-    #viewport-container {
-      flex: 1;
-      display: flex;
-      flex-direction: row;
-    }
-
-    #viewport {
-      flex: 1;
-      background-color: #1e1e1e;
-    }
-
-    .control-panel {
-      width: 350px;
-      background: rgba(17, 24, 39, 0.9);
-      overflow-y: auto;
-      padding: 1rem;
-      border-left: 1px solid rgba(75, 85, 99, 0.4);
-    }
-
-    .stats-panel {
-      position: absolute;
-      bottom: 1rem;
-      right: 1rem;
-      background: rgba(17, 24, 39, 0.9);
-      border-radius: 0.5rem;
-      padding: 1rem;
-      border: 1px solid rgba(75, 85, 99, 0.4);
-    }
-
-    .btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 0.5rem;
-      padding: 0.5rem;
-      border-radius: 0.375rem;
-      font-size: 0.875rem;
-      font-weight: 500;
-      cursor: pointer;
-      transition: all 0.2s;
-      width: 100%;
-      border: none;
-      color: white;
-    }
-
-    .btn-blue {
-      background: rgba(37, 99, 235, 1);
-    }
-
-    .btn-blue:hover {
-      background: rgba(29, 78, 216, 1);
-    }
-
-    .btn-red {
-      background: rgba(220, 38, 38, 1);
-    }
-
-    .btn-red:hover {
-      background: rgba(185, 28, 28, 1);
-    }
-
-    .slider {
-      -webkit-appearance: none;
-      width: 100%;
-      height: 4px;
-      border-radius: 2px;
-      background: rgba(75, 85, 99, 0.4);
-      outline: none;
-    }
-
-    .slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      width: 16px;
-      height: 16px;
-      border-radius: 50%;
-      background: rgba(37, 99, 235, 1);
-      cursor: pointer;
-    }
-
-    .notification {
-      position: fixed;
-      bottom: 1rem;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(5, 150, 105, 0.9);
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border-radius: 0.375rem;
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
-
-    .notification.show {
-      opacity: 1;
-    }
-  </style>
+  <title>Corebell Engine</title>
 </head>
 <body>
-  <div id="viewport-container">
-    <div id="viewport"></div>
-    <div class="control-panel">
-      <h2 class="text-xl font-bold mb-4">Corebell Engine v0.0.1</h2>
-      <div class="grid grid-cols-2 gap-2 mb-4">
-        <button class="btn btn-blue" onclick="addObject('cube')">Cube</button>
-        <button class="btn btn-blue" onclick="addObject('sphere')">Sphere</button>
-        <button class="btn btn-blue" onclick="addObject('cylinder')">Cylinder</button>
-        <button class="btn btn-red" onclick="deleteSelected()">Delete</button>
-      </div>
-      <div class="mb-4">
-        <div class="text-sm font-medium mb-2">Transform Mode</div>
-        <div class="grid grid-cols-3 gap-2">
-          <button class="btn btn-blue" onclick="setTransformMode('translate')">Translate</button>
-          <button class="btn btn-blue" onclick="setTransformMode('rotate')">Rotate</button>
-          <button class="btn btn-blue" onclick="setTransformMode('scale')">Scale</button>
-        </div>
-      </div>
-      <div class="mb-4">
-        <div class="text-sm font-medium mb-2">Scene Settings</div>
-        <div class="flex items-center gap-2 mb-2">
-          <button class="btn btn-blue" onclick="toggleGrid()">Toggle Grid</button>
-          <input type="color" value="#ffffff" onchange="setLightColor(this.value)" class="flex-1">
-        </div>
-        <input type="range" class="slider" min="0" max="2" step="0.1" value="1" onchange="setLightIntensity(this.value)">
-      </div>
-    </div>
+  <div id="viewport" style="width: 100vw; height: 100vh;"></div>
+  <div style="position: fixed; top: 10px; left: 10px; z-index: 10;">
+    <button id="addCube">Add Cube</button>
+    <button id="addSphere">Add Sphere</button>
+    <button id="toggleGrid">Toggle Grid</button>
+    <input id="setLight" type="range" min="0" max="2" step="0.1" value="1">
   </div>
-  <div class="stats-panel">
-    <div>FPS: <span id="fps" class="stats-value">60</span></div>
-    <div>Objects: <span id="objectCount" class="stats-value">0</span></div>
-    <div>Triangles: <span id="triangles" class="stats-value">0</span></div>
-  </div>
-  <div id="notification" class="notification">Object added to scene!</div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/three.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/examples/js/controls/TransformControls.js"></script>
-  <script>
-    let scene, camera, renderer, controls, transformControls, gridHelper;
-    const objects = [];
-
-    function init() {
-      // Scene
-      scene = new THREE.Scene();
-
-      // Camera
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 5, 10);
-
-      // Renderer
-      renderer = new THREE.WebGLRenderer({ antialias: true });
-      renderer.setSize(window.innerWidth - 350, window.innerHeight);
-      renderer.shadowMap.enabled = true;
-      document.getElementById('viewport').appendChild(renderer.domElement);
-
-      // Controls
-      controls = new THREE.OrbitControls(camera, renderer.domElement);
-      controls.enableDamping = true;
-
-      transformControls = new THREE.TransformControls(camera, renderer.domElement);
-      transformControls.addEventListener('dragging-changed', (event) => {
-        controls.enabled = !event.value;
-      });
-      scene.add(transformControls);
-
-      // Grid
-      gridHelper = new THREE.GridHelper(20, 20);
-      scene.add(gridHelper);
-
-      animate();
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-      controls.update();
-      renderer.render(scene, camera);
-    }
-
-    init();
-  </script>
+  <script src="corebell.js"></script>
 </body>
 </html>
