--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -1,19 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Corebell Engine</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Interface | Corebell Engine</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background-color: #1e1e1e;
+      font-family: Arial, sans-serif;
+    }
+    #controls {
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      background: rgba(0, 0, 0, 0.8);
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+      z-index: 10;
+    }
+    button {
+      margin: 5px;
+      padding: 5px 10px;
+      background: #007bff;
+      border: none;
+      color: white;
+      cursor: pointer;
+      border-radius: 3px;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+    input[type="range"] {
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <div id="viewport" style="width: 100vw; height: 100vh;"></div>
-  <div style="position: fixed; top: 10px; left: 10px; z-index: 10;">
+  <div id="viewport"></div>
+  <div id="controls">
+    <h3>Corebell Engine</h3>
     <button id="addCube">Add Cube</button>
     <button id="addSphere">Add Sphere</button>
     <button id="toggleGrid">Toggle Grid</button>
-    <input id="setLight" type="range" min="0" max="2" step="0.1" value="1">
+    <button id="deleteObject">Delete Selected</button>
+    <br>
+    <label>Light Intensity</label>
+    <input id="lightIntensity" type="range" min="0" max="2" step="0.1" value="1">
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/three.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/examples/js/controls/OrbitControls.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/examples/js/controls/TransformControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/TransformControls.js"></script>
   <script src="corebell.js"></script>
 </body>
 </html>
