--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -39,17 +39,20 @@
   </style>
 </head>
 <body>
-  <div id="viewport"></div>
-  <div id="controls">
-    <h3>Corebell Engine</h3>
-    <button id="addCube">Add Cube</button>
-    <button id="addSphere">Add Sphere</button>
-    <button id="toggleGrid">Toggle Grid</button>
-    <button id="deleteObject">Delete Selected</button>
-    <br>
-    <label>Light Intensity</label>
-    <input id="lightIntensity" type="range" min="0" max="2" step="0.1" value="1">
-  </div>
+<div id="controls">
+  <h3>Corebell Engine</h3>
+  <button id="addCube">Add Cube</button>
+  <button id="addSphere">Add Sphere</button>
+  <button id="toggleGrid">Toggle Grid</button>
+  <button id="deleteObject">Delete Selected</button>
+  <br>
+  <label>Light Intensity</label>
+  <input id="lightIntensity" type="range" min="0" max="2" step="0.1" value="1">
+  <br>
+  <button id="saveScene">Save Scene</button>
+  <input id="loadSceneInput" type="file" style="display:none;">
+  <button onclick="document.getElementById('loadSceneInput').click()">Load Scene</button>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/OrbitControls.js"></script>
