--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -39,6 +39,7 @@
   </style>
 </head>
 <body>
+<div id="viewport" style="width: 100vw; height: 100vh;"></div>
 <div id="controls">
   <h3>Corebell Engine</h3>
   <button id="addCube">Add Cube</button>
@@ -57,6 +58,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.146.0/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/controls/TransformControls.js"></script>
-  <script src="corebell.js"></script>
+  <script src="corebell.js" defer></script>
 </body>
 </html>
