--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -42,8 +42,14 @@
 <div id="viewport" style="width: 100vw; height: 100vh;"></div>
 <div id="controls">
   <h3>Corebell Engine</h3>
-  <button id="addCube">Add Cube</button>
-  <button id="addSphere">Add Sphere</button>
+<button id="addCylinder">Add Cylinder</button>
+<button id="addCone">Add Cone</button>
+<button id="addTorus">Add Torus</button>
+<button id="addPlane">Add Plane</button>
+<button id="addIcosahedron">Add Icosahedron</button>
+<button id="addDodecahedron">Add Dodecahedron</button>
+<button id="addTetrahedron">Add Tetrahedron</button>
+  
   <button id="toggleGrid">Toggle Grid</button>
   <button id="deleteObject">Delete Selected</button>
   <br>
