--- a/pages/apps/corebell-engine/index.html
+++ b/pages/apps/corebell-engine/index.html
@@ -42,6 +42,8 @@
 <div id="viewport" style="width: 100vw; height: 100vh;"></div>
 <div id="controls">
   <h3>Corebell Engine</h3>
+  <button id="addCube">Add Cube</button>
+  <button id="addSphere">Add Sphere</button>
 <button id="addCylinder">Add Cylinder</button>
 <button id="addCone">Add Cone</button>
 <button id="addTorus">Add Torus</button>
@@ -49,7 +51,6 @@
 <button id="addIcosahedron">Add Icosahedron</button>
 <button id="addDodecahedron">Add Dodecahedron</button>
 <button id="addTetrahedron">Add Tetrahedron</button>
-  
   <button id="toggleGrid">Toggle Grid</button>
   <button id="deleteObject">Delete Selected</button>
   <br>
