--- a/index.html
+++ b/index.html
@@ -2,80 +2,138 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="referrer" content="strict-origin">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Explore Corebell Engine, read our blog posts, and discover innovative solutions by Rendani Manugeni">
+    <meta name="theme-color" content="#ffffff">
     <link rel="icon" href="/data/images/favicon.png">
-    <link rel="stylesheet" href="/data/css/main.css">
-    <script src="/data/js/main.js"></script>
-    <title>Explore Corebell Engine, Moodify, Blogs and Nina AI Chat | Rendani</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
+    <title>Explore Corebell Engine, Blogs and More | Rendani</title>
 </head>
-<body>
-    <nav>
-        <a class="nav-link" href="/" aria-label="Home">
-            <img src="/data/images/Rendani_Logo.png" alt="Rendani's Logo">
-        </a>
-        <div class="nav-menu">
-            <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
-            <a class="nav-link" href="/pages/blog/">Blog</a>
+<body class="bg-gray-50 min-h-screen flex flex-col">
+    <!-- Navigation -->
+    <nav class="bg-white shadow-md">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16">
+                <div class="flex items-center">
+                    <a href="/" class="flex-shrink-0" aria-label="Home">
+                        <img class="h-8 w-auto" src="/data/images/Rendani_Logo.png" alt="Rendani's Logo">
+                    </a>
+                </div>
+                
+                <!-- Desktop Navigation -->
+                <div class="hidden md:flex md:items-center md:space-x-8">
+                    <a href="/pages/apps/corebell-engine/" class="text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium transition-colors">Corebell Engine</a>
+                    <a href="/pages/blog/" class="text-gray-700 hover:text-gray-900 px-3 py-2 rounded-md text-sm font-medium transition-colors">Blog</a>
+                </div>
+
+                <!-- Mobile Navigation Button -->
+                <div class="flex items-center md:hidden">
+                    <button type="button" class="mobile-menu-button inline-flex items-center justify-center p-2 rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500" aria-expanded="false">
+                        <span class="sr-only">Open main menu</span>
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
-        <div class="nav-toggle">&#9776;</div> <!-- Hamburger icon -->
+
+        <!-- Mobile Navigation Menu -->
+        <div class="hidden mobile-menu md:hidden">
+            <div class="px-2 pt-2 pb-3 space-y-1">
+                <a href="/pages/apps/corebell-engine/" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Corebell Engine</a>
+                <a href="/pages/blog/" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50">Blog</a>
+            </div>
+        </div>
     </nav>
-    <hr>
-    <h2 style="text-align: center;">Welcome</h2>
 
-    <!-- Dynamic Content Section -->
-    <div id="dynamic-content" style="text-align: center; margin: 20px;">
-        <h3>Random Quote of the Day</h3>
-        <p id="random-quote">Loading quote...</p>
-        <img id="random-image" src="" alt="Random Image" style="max-width: 100%; height: auto; margin-top: 20px; border-radius: 10px;">
-    </div>
+    <!-- Main Content -->
+    <main class="flex-grow">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+            <h1 class="text-4xl font-bold text-center text-gray-900 mb-8">Welcome</h1>
 
-    <hr>
-    <footer>
-        <ul>
-            <h3>Links</h3>
-            <a target="_blank" class="nav-link" href="https://linktr.ee/callmerendani">Linktree</a>
-            <a target="_blank" class="nav-link" href="https://github.com/sponsors/manugeni">Sponsor Me</a>
-            <a target="_blank" class="nav-link" href="https://github.com/manugeni">GitHub</a>
-            <h3>Apps</h3>
-            <a class="nav-link" href="/pages/apps/corebell-engine/">Corebell Engine</a>
-        </ul>
+            <!-- Quote Card -->
+            <div class="bg-white rounded-lg shadow-lg p-6 mb-8">
+                <h2 class="text-2xl font-semibold text-gray-900 mb-4">Quote of the Day</h2>
+                <div id="random-quote" class="text-lg text-gray-700 italic">Loading quote...</div>
+            </div>
+
+            <!-- Image Card -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                <img id="random-image" class="w-full h-96 object-cover" src="/api/placeholder/800/600" alt="Random inspirational image">
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-gray-900 text-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div>
+                    <h3 class="text-lg font-semibold mb-4">Links</h3>
+                    <div class="space-y-2">
+                        <a href="https://linktr.ee/callmerendani" target="_blank" rel="noopener noreferrer" class="block text-gray-300 hover:text-white transition-colors">Linktree</a>
+                        <a href="https://github.com/sponsors/manugeni" target="_blank" rel="noopener noreferrer" class="block text-gray-300 hover:text-white transition-colors">Sponsor Me</a>
+                        <a href="https://github.com/manugeni" target="_blank" rel="noopener noreferrer" class="block text-gray-300 hover:text-white transition-colors">GitHub</a>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="text-lg font-semibold mb-4">Apps</h3>
+                    <a href="/pages/apps/corebell-engine/" class="block text-gray-300 hover:text-white transition-colors">Corebell Engine</a>
+                </div>
+            </div>
+            <div class="mt-8 pt-8 border-t border-gray-800 text-center text-gray-400">
+                © 2025 Rendani Manugeni.
+            </div>
+        </div>
     </footer>
-    <p style="text-align: center;"> 2025 &copy Rendani Manugeni.</p>
 
     <script>
-        // Function to fetch a random quote
+        // Mobile menu toggle
+        document.querySelector('.mobile-menu-button').addEventListener('click', function() {
+            document.querySelector('.mobile-menu').classList.toggle('hidden');
+        });
+
+        // Quote fetching with error handling and loading state
         async function fetchRandomQuote() {
+            const quoteElement = document.getElementById('random-quote');
             try {
                 const response = await fetch('https://api.quotable.io/random');
+                if (!response.ok) throw new Error('Network response was not ok');
                 const data = await response.json();
-                document.getElementById('random-quote').textContent = `"${data.content}" - ${data.author}`;
+                quoteElement.innerHTML = `
+                    <p class="mb-2">"${data.content}"</p>
+                    <p class="text-right text-gray-600">— ${data.author}</p>
+                `;
             } catch (error) {
                 console.error('Error fetching quote:', error);
-                document.getElementById('random-quote').textContent = "Failed to load quote. Please try again later.";
+                quoteElement.textContent = "Could not load the quote. Please try again later.";
             }
         }
 
-        // Function to fetch a random image
+        // Image fetching with error handling and loading state
         async function fetchRandomImage() {
+            const imgElement = document.getElementById('random-image');
             try {
                 const response = await fetch('https://source.unsplash.com/random/800x600');
-                const imageUrl = response.url;
-                document.getElementById('random-image').src = imageUrl;
+                if (!response.ok) throw new Error('Network response was not ok');
+                imgElement.src = response.url;
+                imgElement.alt = "Random inspirational image of the day";
             } catch (error) {
                 console.error('Error fetching image:', error);
-                document.getElementById('random-image').alt = "Failed to load image.";
+                imgElement.alt = "Could not load image";
             }
         }
 
-        // Initialize dynamic content
-        function initializeDynamicContent() {
+        // Initialize content when DOM is loaded
+        document.addEventListener('DOMContentLoaded', () => {
             fetchRandomQuote();
             fetchRandomImage();
-        }
 
-        // Run the initialization function when the DOM is fully loaded
-        document.addEventListener("DOMContentLoaded", initializeDynamicContent);
+            // Refresh content periodically
+            setInterval(fetchRandomQuote, 3600000); // Refresh quote every hour
+            setInterval(fetchRandomImage, 3600000); // Refresh image every hour
+        });
     </script>
 </body>
-</html>
+    </html>
